crates/codegen/language/tests/src/fail/definitions/operator_mismatch/test.stderr
error: All operators under the same expression must have the same model and type.
  --> src/fail/definitions/operator_mismatch/test.rs:19:32
   |
19 |                         name = Foo,
   |                                ^^^
